[tool.poetry]
name = "xpattern"
version = "0.1.0"
description = "The Pattern Matching for Python"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pipetools = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
