[tool.poetry]
name = "xpattern"
version = "0.1.0"
description = "The Pattern Matching for Python"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pampy = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.3"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
